2nd collection corrections
