# personal-finance-api/routes/index.js
@@ -1,11 +1,0 @@
-const router = require('express').Router();
-const swaggerUi = require('swagger-ui-express');
-const swaggerDocument = require('../swagger.json');
-
-router.use('/api-docs', swaggerUi.serve);
-router.get('/api-docs', swaggerUi.setup(swaggerDocument));
-
-router.use('/expenses', require('./expenses'));
-
-module.exports = router;
-
